[gd_scene load_steps=15 format=2]

[ext_resource path="res://entities/enemies/minotaur/minotaur.gd" type="Script" id=1]
[ext_resource path="res://entities/enemies/minotaur/minotaur_sprite_sheet.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "blink"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74 ]
}

[sub_resource type="Animation" id=2]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 82, 83, 84, 85, 86 ]
}

[sub_resource type="Animation" id=4]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 55, 56, 57, 59, 60 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=6]
resource_name = "look"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 63, 64, 65 ]
}

[sub_resource type="Animation" id=7]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 36, 37, 38, 39, 40 ]
}

[sub_resource type="Animation" id=9]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 46, 48, 49, 50 ]
}

[sub_resource type="Animation" id=10]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 10, 11, 12, 13, 14, 15, 16 ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 15, 20 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 16.8098, 21.6316 )

[node name="minotaur" type="Node2D"]
scale = Vector2( 2, 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=[
"Enemy",
]]
script = ExtResource( 1 )
knockback = 3

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 2 )
vframes = 20
hframes = 9
frame = 50

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody2D/Sprite"]
anims/blink = SubResource( 1 )
anims/charge_prepare = SubResource( 2 )
anims/die = SubResource( 3 )
anims/ground_circle_attack = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/look = SubResource( 6 )
anims/oveahead_attack = SubResource( 7 )
anims/poke_attack = SubResource( 8 )
anims/taunt = SubResource( 9 )
anims/walk = SubResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -2, -4 )
shape = SubResource( 11 )

[node name="overhead" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KinematicBody2D/overhead"]
position = Vector2( 5.92921, -0.307443 )
polygon = PoolVector2Array( 20.5819, 20.3533, 31.6584, -8.00738, 27.7045, -27.8897, 19.2319, -35.7975, 7.25981, -36.9624, -3.36166, -36.1364, -7.76741, -29.1324, 1.38299, -29.8102, 7.40583, -31.0332, 13.8621, -22.3371, 2.39895, 16.5322, 8.8552, 21.6709 )

[node name="stab" type="Area2D" parent="KinematicBody2D"]
visible = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KinematicBody2D/stab"]
visible = false
polygon = PoolVector2Array( 14, -2, 40, -2, 44, 3, 36, 9, 20, 4, 12, 6 )

[node name="circle_sweep" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KinematicBody2D/circle_sweep"]
polygon = PoolVector2Array( -17.9554, 16.4844, -18.1257, 8.31091, -18.4663, -14.6771, -24.7667, -13.6554, -32.9402, -11.4417, -36.3458, -1.05457, -40.4325, 16.6547, -29.8823, 16.4883 )

[node name="touch" type="Area2D" parent="KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/touch"]
position = Vector2( -1.96342, -4.26352 )
scale = Vector2( 0.937584, 1 )
shape = SubResource( 12 )
disabled = true

[connection signal="animation_finished" from="KinematicBody2D/Sprite/AnimationPlayer" to="KinematicBody2D" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="KinematicBody2D/overhead" to="KinematicBody2D" method="_on_overhead_body_entered"]
[connection signal="body_entered" from="KinematicBody2D/circle_sweep" to="KinematicBody2D" method="_on_circle_sweep_body_entered"]
[connection signal="body_entered" from="KinematicBody2D/touch" to="KinematicBody2D" method="_on_touch_body_entered"]
